[package]
name = "core-agent-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "process", "io-util"] }
